import org.springframework.boot.gradle.plugin.SpringBootPlugin

plugins {
    alias(libs.plugins.spring.boot) apply false
    alias(libs.plugins.spring.dependency.management) apply false
    alias(libs.plugins.liquibase) apply false
    alias(libs.plugins.docker.compose)
}

// Global Docker Compose Config
dockerCompose {
    waitForTcpPorts = true
    stopContainers = true
    dev {
        projectName = 'template-dev'
        useComposeFiles = ['docker-compose.dev.yml']
    }
}

allprojects {
    group = 'com.osamuharu'
    version = '0.0.1-SNAPSHOT'

    apply plugin: 'java'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'


    // Manage Spring Boot dependencies using the BOM to ensure consistent versions across all modules
    dependencyManagement {
        imports {
            mavenBom SpringBootPlugin.BOM_COORDINATES
        }
    }

    configurations {
        configureEach {
            exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
        }
    }

    dependencies {
        // Log4j2
        implementation libs.spring.boot.starter.log4j2
        implementation libs.disruptor
        implementation libs.jackson.dataformat.yaml

        // Lombok
        compileOnly libs.lombok
        annotationProcessor libs.lombok

        // Testing
        testImplementation libs.spring.boot.starter.test
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    tasks.withType(Test).configureEach {
        useJUnitPlatform()
        jvmArgs("-XX:+EnableDynamicAgentLoading")
    }
}